--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
+/public/nginx.htaccess
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
